// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputSwitch component tests checked - false, danger - false, disabled - false, pressed - false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#85888e"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#85888e",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#ffffff"",
          "borderRadius": 100,
          "height": 14,
          "left": "2.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 14,
            "left": 2.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - false, danger - false, disabled - false, pressed - true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""rgba(133, 136, 142, 1)"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "rgba(133, 136, 142, 1)",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#ffffff"",
          "borderRadius": 100,
          "height": 14,
          "left": "2.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 14,
            "left": 2.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - false, danger - false, disabled - true, pressed - false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#DFDFDF"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#DFDFDF",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#ffffff"",
          "borderRadius": 100,
          "height": 14,
          "left": "2.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 14,
            "left": 2.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - false, danger - false, disabled - true, pressed - true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#DFDFDF"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#DFDFDF",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#ffffff"",
          "borderRadius": 100,
          "height": 14,
          "left": "2.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 14,
            "left": 2.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - false, danger - true, disabled - false, pressed - false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#85888e"",
        "borderColor": ""#db3424"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#85888e",
          "borderColor": "#db3424",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#ffffff"",
          "borderRadius": 100,
          "height": 14,
          "left": "2.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 14,
            "left": 2.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - false, danger - true, disabled - false, pressed - true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""rgba(133, 136, 142, 1)"",
        "borderColor": ""#db3424"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "rgba(133, 136, 142, 1)",
          "borderColor": "#db3424",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#ffffff"",
          "borderRadius": 100,
          "height": 14,
          "left": "2.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 14,
            "left": 2.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - false, danger - true, disabled - true, pressed - false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#DFDFDF"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#DFDFDF",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#ffffff"",
          "borderRadius": 100,
          "height": 14,
          "left": "2.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 14,
            "left": 2.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - false, danger - true, disabled - true, pressed - true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#DFDFDF"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#DFDFDF",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#ffffff"",
          "borderRadius": 100,
          "height": 14,
          "left": "2.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#ffffff",
            "borderRadius": 100,
            "height": 14,
            "left": 2.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - true, danger - false, disabled - false, pressed - false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#2b2e33"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#2b2e33",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#fafafa"",
          "borderRadius": 100,
          "height": 14,
          "left": "16.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#fafafa",
            "borderRadius": 100,
            "height": 14,
            "left": 16.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - true, danger - false, disabled - false, pressed - true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""rgba(43, 46, 51, 1)"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "rgba(43, 46, 51, 1)",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#fafafa"",
          "borderRadius": 100,
          "height": 14,
          "left": "16.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#fafafa",
            "borderRadius": 100,
            "height": 14,
            "left": 16.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - true, danger - false, disabled - true, pressed - false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#9A9A9A"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#9A9A9A",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#fafafa"",
          "borderRadius": 100,
          "height": 14,
          "left": "16.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#fafafa",
            "borderRadius": 100,
            "height": 14,
            "left": 16.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - true, danger - false, disabled - true, pressed - true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#9A9A9A"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#9A9A9A",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#fafafa"",
          "borderRadius": 100,
          "height": 14,
          "left": "16.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#fafafa",
            "borderRadius": 100,
            "height": 14,
            "left": 16.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - true, danger - true, disabled - false, pressed - false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#2b2e33"",
        "borderColor": ""#db3424"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#2b2e33",
          "borderColor": "#db3424",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#fafafa"",
          "borderRadius": 100,
          "height": 14,
          "left": "16.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#fafafa",
            "borderRadius": 100,
            "height": 14,
            "left": 16.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - true, danger - true, disabled - false, pressed - true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""rgba(43, 46, 51, 1)"",
        "borderColor": ""#db3424"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "rgba(43, 46, 51, 1)",
          "borderColor": "#db3424",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#fafafa"",
          "borderRadius": 100,
          "height": 14,
          "left": "16.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#fafafa",
            "borderRadius": 100,
            "height": 14,
            "left": 16.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - true, danger - true, disabled - true, pressed - false 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#9A9A9A"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#9A9A9A",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#fafafa"",
          "borderRadius": 100,
          "height": 14,
          "left": "16.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#fafafa",
            "borderRadius": 100,
            "height": 14,
            "left": 16.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`InputSwitch component tests checked - true, danger - true, disabled - true, pressed - true 1`] = `
<View
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": true,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "height": 21,
      "width": 35,
    }
  }
>
  <View
    collapsable={false}
    jestAnimatedProps={
      {
        "value": {},
      }
    }
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    jestInlineStyle={
      {
        "backgroundColor": ""#9A9A9A"",
        "borderColor": ""transparent"",
        "borderRadius": 100,
        "borderWidth": 1,
        "height": 21,
        "padding": 3.5,
        "width": 35,
      }
    }
    style={
      [
        {
          "backgroundColor": "#9A9A9A",
          "borderColor": "transparent",
          "borderRadius": 100,
          "borderWidth": 1,
          "height": 21,
          "padding": 3.5,
          "width": 35,
        },
      ]
    }
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {},
        }
      }
      jestInlineStyle={
        {
          "backgroundColor": ""#fafafa"",
          "borderRadius": 100,
          "height": 14,
          "left": "16.5",
          "position": "absolute",
          "top": 2.5,
          "width": 14,
        }
      }
      style={
        [
          {
            "backgroundColor": "#fafafa",
            "borderRadius": 100,
            "height": 14,
            "left": 16.5,
            "position": "absolute",
            "top": 2.5,
            "width": 14,
          },
        ]
      }
    />
  </View>
</View>
`;
